--- a/ox_wrapper/ox_wrapper_log.html
+++ b/ox_wrapper/ox_wrapper_log.html
@@ -1,46 +1,58 @@
 <!DOCTYPE html>
 <html>
-<head><title>OX_WRAPPER "STRIXSPIDER" log output(9/January/2018)</title></head>
+<head><title>OX_WRAPPER "STRIXSPIDER" log output(14/January/2018)</title></head>
 <body>
 <table>
 <thead><tr>
-<th colspan="2">OX_WRAPPER "STRIXSPIDER" log output(9/January/2018)</th>
+<th colspan="2">OX_WRAPPER "STRIXSPIDER" log output(14/January/2018)</th>
 </tr></thead>
 <tbody>
 <tr bgcolor="#f2f2f2">
-<td align="center">/9/January/2018/ (10:17:08.660357)</td><td align="right">*****************Log started*****************</td>
+<td align="center">/14/January/2018/ (17:25:56.845700)</td><td align="right">*****************Log started*****************</td>
 </tr><tr bgcolor="#ffcc00">
-<td align="center">/9/January/2018/ (10:17:08.956721)</td><td align="right"><b>WARNING: variable "center" does not exist</b></td>
+<td align="center">/14/January/2018/ (17:25:57.148139)</td><td align="right"><b>WARNING: variable "center" does not exist</b></td>
 </tr><tr bgcolor="#ffcc00">
-<td align="center">/9/January/2018/ (10:17:08.956850)</td><td align="right"><b>WARNING: variable "center" does not exist</b></td>
+<td align="center">/14/January/2018/ (17:25:57.148254)</td><td align="right"><b>WARNING: variable "center" does not exist</b></td>
 </tr><tr bgcolor="#ffcc00">
-<td align="center">/9/January/2018/ (10:17:08.956949)</td><td align="right"><b>WARNING: variable "radius" does not exist</b></td>
+<td align="center">/14/January/2018/ (17:25:57.148352)</td><td align="right"><b>WARNING: variable "radius" does not exist</b></td>
 </tr><tr bgcolor="#ffcc00">
-<td align="center">/9/January/2018/ (10:17:08.957046)</td><td align="right"><b>WARNING: variable "radius" does not exist</b></td>
+<td align="center">/14/January/2018/ (17:25:57.148472)</td><td align="right"><b>WARNING: variable "radius" does not exist</b></td>
 </tr><tr bgcolor="#ffcc00">
-<td align="center">/9/January/2018/ (10:17:08.957734)</td><td align="right"><b>WARNING: variable "center" does not exist</b></td>
+<td align="center">/14/January/2018/ (17:25:57.149099)</td><td align="right"><b>WARNING: variable "center" does not exist</b></td>
 </tr><tr bgcolor="#ffcc00">
-<td align="center">/9/January/2018/ (10:17:08.957834)</td><td align="right"><b>WARNING: variable "center" does not exist</b></td>
+<td align="center">/14/January/2018/ (17:25:57.149195)</td><td align="right"><b>WARNING: variable "center" does not exist</b></td>
 </tr><tr bgcolor="#ffcc00">
-<td align="center">/9/January/2018/ (10:17:08.957929)</td><td align="right"><b>WARNING: variable "radius" does not exist</b></td>
+<td align="center">/14/January/2018/ (17:25:57.149286)</td><td align="right"><b>WARNING: variable "radius" does not exist</b></td>
 </tr><tr bgcolor="#ffcc00">
-<td align="center">/9/January/2018/ (10:17:08.958022)</td><td align="right"><b>WARNING: variable "radius" does not exist</b></td>
+<td align="center">/14/January/2018/ (17:25:57.149391)</td><td align="right"><b>WARNING: variable "radius" does not exist</b></td>
 </tr><tr bgcolor="#ffcc00">
-<td align="center">/9/January/2018/ (10:17:09.075273)</td><td align="right"><b>WARNING: variable "num_rays" does not exist</b></td>
+<td align="center">/14/January/2018/ (17:25:57.299106)</td><td align="right"><b>WARNING: variable "num_rays" does not exist</b></td>
 </tr><tr bgcolor="#ffcc00">
-<td align="center">/9/January/2018/ (10:17:09.075409)</td><td align="right"><b>WARNING: variable "num_spectra_pairs_supported" does not exist</b></td>
+<td align="center">/14/January/2018/ (17:25:57.299258)</td><td align="right"><b>WARNING: variable "num_spectra_pairs_supported" does not exist</b></td>
 </tr><tr bgcolor="#ffcc00">
-<td align="center">/9/January/2018/ (10:17:09.075507)</td><td align="right"><b>WARNING: variable "emitter_size" does not exist</b></td>
+<td align="center">/14/January/2018/ (17:25:57.299358)</td><td align="right"><b>WARNING: variable "emitter_size" does not exist</b></td>
 </tr><tr bgcolor="#ffcc00">
-<td align="center">/9/January/2018/ (10:17:09.075603)</td><td align="right"><b>WARNING: variable "emitter_position" does not exist</b></td>
+<td align="center">/14/January/2018/ (17:25:57.299453)</td><td align="right"><b>WARNING: variable "emitter_position" does not exist</b></td>
 </tr><tr bgcolor="#ffcc00">
-<td align="center">/9/January/2018/ (10:17:09.075698)</td><td align="right"><b>WARNING: variable "emitter_rotation" does not exist</b></td>
-</tr><tr bgcolor="#ff0000">
-<td align="center">/9/January/2018/ (10:17:09.107928)</td><td align="right"><b>ox_wrapper has thrown exception at line 21 in function "ox_wrapper::OxProgram::OxProgram" located at source file "d:\repos\rt_framework\ox_wrapper\ox_wrapper\program.cpp" (Parse error (Details: Function "_rtProgramCreateFromPTXFile" caught exception: Function '__ox_scattering_material_default_absorption_factor__' not found in PTX))</b></td>
+<td align="center">/14/January/2018/ (17:25:57.299547)</td><td align="right"><b>WARNING: variable "emitter_rotation" does not exist</b></td>
+</tr><tr bgcolor="#ffcc00">
+<td align="center">/14/January/2018/ (17:25:57.432877)</td><td align="right"><b>WARNING: unable to set program id to variable "absorption_factor". Variable with this name does not exist</b></td>
+</tr><tr bgcolor="#ffcc00">
+<td align="center">/14/January/2018/ (17:25:57.433005)</td><td align="right"><b>WARNING: unable to set program id to variable "absorption_factor". Variable with this name does not exist</b></td>
+</tr><tr bgcolor="#ffcc00">
+<td align="center">/14/January/2018/ (17:25:57.433113)</td><td align="right"><b>WARNING: unable to set program id to variable "absorption_factor". Variable with this name does not exist</b></td>
+</tr><tr bgcolor="#ffcc00">
+<td align="center">/14/January/2018/ (17:25:57.433230)</td><td align="right"><b>WARNING: unable to set program id to variable "scattering_factor". Variable with this name does not exist</b></td>
+</tr><tr bgcolor="#ffcc00">
+<td align="center">/14/January/2018/ (17:25:57.433340)</td><td align="right"><b>WARNING: unable to set program id to variable "scattering_factor". Variable with this name does not exist</b></td>
+</tr><tr bgcolor="#ffcc00">
+<td align="center">/14/January/2018/ (17:25:57.433453)</td><td align="right"><b>WARNING: unable to set program id to variable "phase_function". Variable with this name does not exist</b></td>
+</tr><tr bgcolor="#ffcc00">
+<td align="center">/14/January/2018/ (17:25:57.433562)</td><td align="right"><b>WARNING: unable to set program id to variable "phase_function". Variable with this name does not exist</b></td>
 </tr><tr bgcolor="#f2f2f2">
-<td align="center">/9/January/2018/ (10:17:09.137660)</td><td align="right">Alive entities: 0</td>
+<td align="center">/14/January/2018/ (17:25:57.471732)</td><td align="right">Alive entities: 0</td>
 </tr><tr bgcolor="#f2f2f2">
-<td align="center">/9/January/2018/ (10:17:09.137767)</td><td align="right">*****************End of the log*****************
+<td align="center">/14/January/2018/ (17:25:57.471841)</td><td align="right">*****************End of the log*****************
 
 
 </td>
