--- a/ox_wrapper/ox_wrapper_log.html
+++ b/ox_wrapper/ox_wrapper_log.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html>
-<head><title>OX_WRAPPER "DESKTOP-GA7HRK9" log output(7/February/2018)</title></head>
+<head><title>OX_WRAPPER "STRIXSPIDER"v 0.1alpha (PERUN) log output(11/February/2018)</title></head>
 <body>
 <table>
 <thead><tr>
-<th colspan="2">OX_WRAPPER "DESKTOP-GA7HRK9" log output(7/February/2018)</th>
+<th colspan="2">OX_WRAPPER "STRIXSPIDER"v 0.1alpha (PERUN) log output(11/February/2018)</th>
 </tr></thead>
 <tbody>
 <tr bgcolor="#f2f2f2">
-<td align="center">/7/February/2018/ (16:09:09.503797)</td><td align="right">*****************Log started*****************</td>
+<td align="center">/11/February/2018/ (1:53:54.769534)</td><td align="right">*****************Log started*****************</td>
+</tr><tr bgcolor="#ff0000">
+<td align="center">/11/February/2018/ (1:53:56.051373)</td><td align="right"><b>ox_wrapper has thrown exception at line 19 in function "ox_wrapper::util::lua_support::LuaState::executeScript" located at source file "d:\repos\rt_framework\ox_wrapper\ox_wrapper\util\lua_support.cpp" (lua: error: attempt to load a text chunk (mode is ''))</b></td>
 </tr><tr bgcolor="#f2f2f2">
-<td align="center">/7/February/2018/ (16:09:10.022933)</td><td align="right">Alive entities: 0</td>
+<td align="center">/11/February/2018/ (1:53:56.054708)</td><td align="right">Alive entities: 0</td>
 </tr><tr bgcolor="#f2f2f2">
-<td align="center">/7/February/2018/ (16:09:10.023012)</td><td align="right">*****************End of the log*****************
+<td align="center">/11/February/2018/ (1:53:56.054811)</td><td align="right">*****************End of the log*****************
 
 
 </td>
