Decouple OxRayGenerator object from OxSceneSection
Former-commit-id: 4871774ca5772846984208315dcfb603d3a54d70

--- a/ox_wrapper/ox_wrapper_log.html
+++ b/ox_wrapper/ox_wrapper_log.html
@@ -8,13 +8,15 @@
 </tr></thead>
 <tbody>
 <tr bgcolor="#f2f2f2">
-<td align="center">/11/February/2018/ (1:53:54.769534)</td><td align="right">*****************Log started*****************</td>
+<td align="center">/11/February/2018/ (13:10:54.889556)</td><td align="right">*****************Log started*****************</td>
 </tr><tr bgcolor="#ff0000">
-<td align="center">/11/February/2018/ (1:53:56.051373)</td><td align="right"><b>ox_wrapper has thrown exception at line 19 in function "ox_wrapper::util::lua_support::LuaState::executeScript" located at source file "d:\repos\rt_framework\ox_wrapper\ox_wrapper\util\lua_support.cpp" (lua: error: attempt to load a text chunk (mode is ''))</b></td>
+<td align="center">/11/February/2018/ (13:10:55.432280)</td><td align="right"><b>ox_wrapper has thrown exception at line 117 in function "ox_wrapper::OxRayGenerator::launch" located at source file "d:\repos\rt_framework\ox_wrapper\ox_wrapper\ray_generator.cpp" (Invalid value (Details: Function "_rtContextLaunch1D" caught exception: Non-initialized variable ox_entry_node:  Node object))</b></td>
+</tr><tr bgcolor="#ff0000">
+<td align="center">/11/February/2018/ (13:10:55.432668)</td><td align="right"><b>ox_wrapper has thrown exception at line 19 in function "ox_wrapper::util::lua_support::LuaState::executeScript" located at source file "d:\repos\rt_framework\ox_wrapper\ox_wrapper\util\lua_support.cpp" (lua: error: Invalid value (Details: Function "_rtContextLaunch1D" caught exception: Non-initialized variable ox_entry_node:  Node object))</b></td>
 </tr><tr bgcolor="#f2f2f2">
-<td align="center">/11/February/2018/ (1:53:56.054708)</td><td align="right">Alive entities: 0</td>
+<td align="center">/11/February/2018/ (13:10:55.462343)</td><td align="right">Alive entities: 0</td>
 </tr><tr bgcolor="#f2f2f2">
-<td align="center">/11/February/2018/ (1:53:56.054811)</td><td align="right">*****************End of the log*****************
+<td align="center">/11/February/2018/ (13:10:55.462465)</td><td align="right">*****************End of the log*****************
 
 
 </td>
