Resolve ray rotation bug in parallel ray generator
— Topology of rays generated by OxParallelRayGenerator was incorrect. Fixed now.
— Constructor of OxBlackBody now takes two arguments instead of one. The second argument allows
  to explicitly define type of affected rays


Former-commit-id: 564da3a63d182dd78ae085d0c3340a2f6fd9d1f2

--- a/ox_wrapper/ox_wrapper_log.html
+++ b/ox_wrapper/ox_wrapper_log.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head><title>OX_WRAPPER "STRIXSPIDER"v 0.1alpha (PERUN) log output(12/February/2018)</title></head>
+<head><title>OX_WRAPPER "STRIXSPIDER"v 0.1alpha (PERUN) log output(17/February/2018)</title></head>
 <body>
 <table>
 <thead><tr>
-<th colspan="2">OX_WRAPPER "STRIXSPIDER"v 0.1alpha (PERUN) log output(12/February/2018)</th>
+<th colspan="2">OX_WRAPPER "STRIXSPIDER"v 0.1alpha (PERUN) log output(17/February/2018)</th>
 </tr></thead>
 <tbody>
 <tr bgcolor="#f2f2f2">
-<td align="center">/12/February/2018/ (8:27:54.648728)</td><td align="right">*****************Log started*****************</td>
-</tr><tr bgcolor="#f2f2f2">
-<td align="center">/12/February/2018/ (8:27:60.000000)</td><td align="right">Alive entities: 0</td>
-</tr><tr bgcolor="#f2f2f2">
-<td align="center">/12/February/2018/ (8:27:60.000000)</td><td align="right">*****************End of the log*****************
-
-
-</td>
-</tr></tbody>
-</table>
-</body>
-</html
+<td align="center">/17/February/2018/ (8:25:45.252093)</td><td align="right">*****************Log started*****************</td>
+</tr><tr bgcolor="#ff0000">
+<td align="center">/17/February/2018/ (8:26:60.000000)</td><td align="right"><b>ox_wrapper has thrown exception at line 19 in function "ox_wrapper::util::lua_support::LuaState::executeScript" located at source file "d:\repos\rt_framework\ox_wrapper\ox_wrapper\util\lua_support.cpp" (lua: error: [string "OxRayType"]:1: syntax error near <eof>)</b></td>
+</tr><tr bgcolor="#ff0000">
+<td align="center">/17/February/2018/ (8:59:60.000000)</td><td align="right"><b>ox_wrapper has thrown exception at line 19 in function "ox_wrapper::util::lua_support::LuaState::executeScript" located at source file "d:\repos\rt_framework\ox_wrapper\ox_wrapper\util\lua_support.cpp" (lua: error: [string "exit"]:1: syntax error near <eof>)</b></td>
+</tr><tr bgcolor="#ff0000">
+<td align="center">/17/February/2018/ (8:59:60.000000)</td><td align="right"><b>ox_wrapper has thrown exception at line 19 in function "ox_wrapper::util::lua_support::LuaState::executeScript" located at source file "d:\repos\rt_framework\ox_wrapper\ox_wrapper\util\lua_support.cpp" (lua: error: [string "dos(exit)"]:1: attempt to call a nil value (global 'dos'))</b></td>
+</tr>
