Create separate subfolder for demos
Former-commit-id: 163817953143fa726c095e60790957ebc0f8aa77

--- a/ox_wrapper/ox_wrapper_log.html
+++ b/ox_wrapper/ox_wrapper_log.html
@@ -8,15 +8,9 @@
 </tr></thead>
 <tbody>
 <tr bgcolor="#f2f2f2">
-<td align="center">/29/April/2018/ (11:04:00.011308)</td><td align="right">*****************Log started*****************</td>
-</tr><tr bgcolor="#f2f2f2">
-<td align="center">/29/April/2018/ (11:04:08.219251)</td><td align="right">Alive entities: 0</td>
-</tr><tr bgcolor="#f2f2f2">
-<td align="center">/29/April/2018/ (11:04:08.219365)</td><td align="right">*****************End of the log*****************
-
-
-</td>
-</tr></tbody>
-</table>
-</body>
-</html
+<td align="center">/29/April/2018/ (11:19:30.542235)</td><td align="right">*****************Log started*****************</td>
+</tr><tr bgcolor="#ff0000">
+<td align="center">/29/April/2018/ (11:20:60.000000)</td><td align="right"><b>ox_wrapper has thrown exception at line 19 in function "ox_wrapper::util::lua_support::LuaState::executeScript" located at source file "d:\repos\rt_framework\ox_wrapper\ox_wrapper\util\lua_support.cpp" (lua: error: [string "exit"]:1: syntax error near <eof>)</b></td>
+</tr><tr bgcolor="#ff0000">
+<td align="center">/29/April/2018/ (11:20:60.000000)</td><td align="right"><b>ox_wrapper has thrown exception at line 19 in function "ox_wrapper::util::lua_support::LuaState::executeScript" located at source file "d:\repos\rt_framework\ox_wrapper\ox_wrapper\util\lua_support.cpp" (lua: error: attempt to load a text chunk (mode is ''))</b></td>
+</tr>
