--- a/ox_wrapper/ox_wrapper_log.html
+++ b/ox_wrapper/ox_wrapper_log.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head><title>OX_WRAPPER "STRIXSPIDER"v 0.1alpha (PERUN) log output(29/April/2018)</title></head>
+<head><title>OX_WRAPPER "STRIXSPIDER"v 0.1alpha (PERUN) log output(5/May/2018)</title></head>
 <body>
 <table>
 <thead><tr>
-<th colspan="2">OX_WRAPPER "STRIXSPIDER"v 0.1alpha (PERUN) log output(29/April/2018)</th>
+<th colspan="2">OX_WRAPPER "STRIXSPIDER"v 0.1alpha (PERUN) log output(5/May/2018)</th>
 </tr></thead>
 <tbody>
 <tr bgcolor="#f2f2f2">
-<td align="center">/29/April/2018/ (11:19:30.542235)</td><td align="right">*****************Log started*****************</td>
-</tr><tr bgcolor="#ff0000">
-<td align="center">/29/April/2018/ (11:20:60.000000)</td><td align="right"><b>ox_wrapper has thrown exception at line 19 in function "ox_wrapper::util::lua_support::LuaState::executeScript" located at source file "d:\repos\rt_framework\ox_wrapper\ox_wrapper\util\lua_support.cpp" (lua: error: [string "exit"]:1: syntax error near <eof>)</b></td>
-</tr><tr bgcolor="#ff0000">
-<td align="center">/29/April/2018/ (11:20:60.000000)</td><td align="right"><b>ox_wrapper has thrown exception at line 19 in function "ox_wrapper::util::lua_support::LuaState::executeScript" located at source file "d:\repos\rt_framework\ox_wrapper\ox_wrapper\util\lua_support.cpp" (lua: error: attempt to load a text chunk (mode is ''))</b></td>
-</tr>
+<td align="center">/5/May/2018/ (11:48:44.654130)</td><td align="right">*****************Log started*****************</td>
+</tr><tr bgcolor="#f2f2f2">
+<td align="center">/5/May/2018/ (11:48:50.025803)</td><td align="right">Alive entities: 0</td>
+</tr><tr bgcolor="#f2f2f2">
+<td align="center">/5/May/2018/ (11:48:50.025852)</td><td align="right">*****************End of the log*****************
+
+
+</td>
+</tr></tbody>
+</table>
+</body>
+</html
