Gomos demo case is fully functional
Detailed updates are as follows:
- Optix updates to 5.1.0
- Scattering and absorption shader inputs are changed to floats. Note that currently there is no way to pass an integers
  from Lua side to the CPP side: even though there is an interface for doing that, all Lua variables are treated as floats,
  so an explicit parameter to force conversion should be provided.
- Scattering shaders are currently disabled and were not tested properly.
- Added postprocessing MATLAB script for the Gomos data output and comparison versus the reference Gomos data.

Former-commit-id: 52d1a2a7023d43247c2ad0d6d78ccec71b9c74c1

--- a/ox_wrapper/ox_wrapper_log.html
+++ b/ox_wrapper/ox_wrapper_log.html
@@ -1,9 +1,24 @@
 <!DOCTYPE html>
 <html>
-<head><title>OX_WRAPPER "STRIXSPIDER"v 0.1alpha (PERUN) log output(27/May/2018)</title></head>
+<head><title>OX_WRAPPER "STRIXSPIDER"v 0.1alpha (RA) log output(9/June/2018)</title></head>
 <body>
 <table>
 <thead><tr>
-<th colspan="2">OX_WRAPPER "STRIXSPIDER"v 0.1alpha (PERUN) log output(27/May/2018)</th>
+<th colspan="2">OX_WRAPPER "STRIXSPIDER"v 0.1alpha (RA) log output(9/June/2018)</th>
 </tr></thead>
 <tbody>
+<tr bgcolor="#f2f2f2">
+<td align="center">/9/June/2018/ (11:18:41.842391)</td><td align="right">*****************Log started*****************</td>
+</tr><tr bgcolor="#ff0000">
+<td align="center">/9/June/2018/ (11:18:42.001956)</td><td align="right"><b>error while executing expression "res = rtContextValidate(m_optix_context)" in function ox_wrapper::OxContext::isValid at line 125 (d:\repos\rt_framework\ox_wrapper\ox_wrapper\context.cpp). Error code = 0x500(Invalid context (Details: Function "_rtContextValidate" caught exception: Validation error: Ray generation program 0 is null))</b></td>
+</tr><tr bgcolor="#f2f2f2">
+<td align="center">/9/June/2018/ (11:18:55.392238)</td><td align="right">Alive entities: 0</td>
+</tr><tr bgcolor="#f2f2f2">
+<td align="center">/9/June/2018/ (11:18:55.392254)</td><td align="right">*****************End of the log*****************
+
+
+</td>
+</tr></tbody>
+</table>
+</body>
+</html
