--- a/ra/ra_log.html
+++ b/ra/ra_log.html
@@ -1,9 +1,24 @@
 <!DOCTYPE html>
 <html>
-<head><title>OX_WRAPPER "STRIXSPIDER"v 0.1alpha (RA) log output(24/June/2018)</title></head>
+<head><title>RA "STRIXSPIDER"v 0.1alpha (RA) log output(24/June/2018)</title></head>
 <body>
 <table>
 <thead><tr>
-<th colspan="2">OX_WRAPPER "STRIXSPIDER"v 0.1alpha (RA) log output(24/June/2018)</th>
+<th colspan="2">RA "STRIXSPIDER"v 0.1alpha (RA) log output(24/June/2018)</th>
 </tr></thead>
 <tbody>
+<tr bgcolor="#f2f2f2">
+<td align="center">/24/June/2018/ (17:41:59.028220)</td><td align="right">*****************Log started*****************</td>
+</tr><tr bgcolor="#ff0000">
+<td align="center">/24/June/2018/ (17:41:59.259226)</td><td align="right"><b>error while executing expression "res = rtContextValidate(m_optix_context)" in function ra::RaContext::isValid at line 125 (d:\repos\ra\ra\ra\context.cpp). Error code = 0x500(Invalid context (Details: Function "_rtContextValidate" caught exception: Validation error: Ray generation program 0 is null))</b></td>
+</tr><tr bgcolor="#f2f2f2">
+<td align="center">/24/June/2018/ (17:41:60.000000)</td><td align="right">Alive entities: 0</td>
+</tr><tr bgcolor="#f2f2f2">
+<td align="center">/24/June/2018/ (17:41:60.000000)</td><td align="right">*****************End of the log*****************
+
+
+</td>
+</tr></tbody>
+</table>
+</body>
+</html
