--- a/ra/ra_log.html
+++ b/ra/ra_log.html
@@ -8,13 +8,13 @@
 </tr></thead>
 <tbody>
 <tr bgcolor="#f2f2f2">
-<td align="center">/24/June/2018/ (17:41:59.028220)</td><td align="right">*****************Log started*****************</td>
+<td align="center">/24/June/2018/ (17:54:37.213471)</td><td align="right">*****************Log started*****************</td>
 </tr><tr bgcolor="#ff0000">
-<td align="center">/24/June/2018/ (17:41:59.259226)</td><td align="right"><b>error while executing expression "res = rtContextValidate(m_optix_context)" in function ra::RaContext::isValid at line 125 (d:\repos\ra\ra\ra\context.cpp). Error code = 0x500(Invalid context (Details: Function "_rtContextValidate" caught exception: Validation error: Ray generation program 0 is null))</b></td>
+<td align="center">/24/June/2018/ (17:54:37.409894)</td><td align="right"><b>error while executing expression "res = rtContextValidate(m_optix_context)" in function ra::RaContext::isValid at line 125 (d:\repos\ra_framework\ra\ra\context.cpp). Error code = 0x500(Invalid context (Details: Function "_rtContextValidate" caught exception: Validation error: Ray generation program 0 is null))</b></td>
 </tr><tr bgcolor="#f2f2f2">
-<td align="center">/24/June/2018/ (17:41:60.000000)</td><td align="right">Alive entities: 0</td>
+<td align="center">/24/June/2018/ (17:54:53.174406)</td><td align="right">Alive entities: 0</td>
 </tr><tr bgcolor="#f2f2f2">
-<td align="center">/24/June/2018/ (17:41:60.000000)</td><td align="right">*****************End of the log*****************
+<td align="center">/24/June/2018/ (17:54:53.174518)</td><td align="right">*****************End of the log*****************
 
 
 </td>
