--- a/ra/ra_log.html
+++ b/ra/ra_log.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head><title>RA "STRIXSPIDER"v 0.1alpha (RA) log output(24/June/2018)</title></head>
+<head><title>RA "DESKTOP-0C734VF"v 0.1alpha (RA) log output(11/July/2018)</title></head>
 <body>
 <table>
 <thead><tr>
-<th colspan="2">RA "STRIXSPIDER"v 0.1alpha (RA) log output(24/June/2018)</th>
+<th colspan="2">RA "DESKTOP-0C734VF"v 0.1alpha (RA) log output(11/July/2018)</th>
 </tr></thead>
 <tbody>
 <tr bgcolor="#f2f2f2">
-<td align="center">/24/June/2018/ (17:54:37.213471)</td><td align="right">*****************Log started*****************</td>
-</tr><tr bgcolor="#ff0000">
-<td align="center">/24/June/2018/ (17:54:37.409894)</td><td align="right"><b>error while executing expression "res = rtContextValidate(m_optix_context)" in function ra::RaContext::isValid at line 125 (d:\repos\ra_framework\ra\ra\context.cpp). Error code = 0x500(Invalid context (Details: Function "_rtContextValidate" caught exception: Validation error: Ray generation program 0 is null))</b></td>
+<td align="center">/11/July/2018/ (15:51:24.434899)</td><td align="right">*****************Log started*****************</td>
 </tr><tr bgcolor="#f2f2f2">
-<td align="center">/24/June/2018/ (17:54:53.174406)</td><td align="right">Alive entities: 0</td>
+<td align="center">/11/July/2018/ (15:51:34.279143)</td><td align="right">Alive entities: 0</td>
 </tr><tr bgcolor="#f2f2f2">
-<td align="center">/24/June/2018/ (17:54:53.174518)</td><td align="right">*****************End of the log*****************
+<td align="center">/11/July/2018/ (15:51:34.279156)</td><td align="right">*****************End of the log*****************
 
 
 </td>
